--- a/ProjetStore/nbproject/private/private.properties
+++ b/ProjetStore/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=
 index.file=Pages/index.php
 run.as=LOCAL
-url=http://localhost/ProjetStore/
+url=http://127.0.0.1/projetstore/ProjetStore/
