--- a/ProjetStore/nbproject/private/private.properties
+++ b/ProjetStore/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
-index.file=Pages/index.php
+index.file=Pages/Index.php
 run.as=LOCAL
-url=http://127.0.0.1/projects/Store/projetstore/ProjetStore
+url=http://127.0.0.1/projetstore/ProjetStore/
